[package]
name = "tuio-rs"
version = "0.2.0"
edition = "2021"
description = "A TUIO 1.1 implementation in Rust"
readme = "README.md"
homepage = "https://github.com/LTBL-Studio/tuio-rs"
repository = "https://github.com/LTBL-Studio/tuio-rs"
license = "MIT"
keywords = ["tuio", "osc"]
categories = ["network-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn_partial_eq = "0.1.2"
indexmap = "1.9.2"
local-ip-address = "0.5.1"
ringbuffer = "0.12.0"
rosc = "0.9.1"
tungstenite = "0.24.0"
